<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/group10707" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/welcomepage_firsttext"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:text="@string/welcomepage_secondtext"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:srcCompat="@drawable/number1" />

        <TextView
            android:id="@+id/identification"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/welcomepage_thirdttext"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:srcCompat="@drawable/number2" />


        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="left"
            android:text="@string/welcomepage_fourthtext"
            android:textColor="@color/black"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/welcomepage_fithtext"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/button_green2"
            android:text="@string/intro_button"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>
</LinearLayout>