<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/image_splash"
                android:layout_width="@dimen/_120sdp"
                android:layout_height="@dimen/_60sdp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_30sdp"
                android:scaleType="fitXY" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15ssp"
                android:src="@drawable/login_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/login_title"
                android:textColor="@color/darkbleu"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/login_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_30sdp"
                android:text="@string/login_subtitle"
                android:textColor="@color/lightgray"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/login_login"
                android:textColor="@color/darkbleu"
                android:textSize="@dimen/_14ssp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#A2ACBA"
                app:boxBackgroundColor="#FFF"
                app:boxStrokeColor="#FFF"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="#A2ACBA">
                <!--                app:placeholderText="Password"-->

                <EditText
                    android:id="@+id/main_id"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_58sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/selectoredittext"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:hint="@string/login_hint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="20"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColorHint="#A2ACBA"
                    app:hintTextColor="#A2ACBA" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:text="@string/login_password"
                android:textColor="@color/darkbleu"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_58sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/selectoredittext"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"
                    android:paddingStart="@dimen/_10sdp" />


                <ImageView
                    android:id="@+id/mainlogin_showpass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="-60dp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:src="@drawable/ic_eyes" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#A2ACBA"
                app:boxBackgroundColor="#FFF"
                app:boxStrokeColor="#FFF"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="#A2ACBA"
                app:passwordToggleEnabled="true">
                <!--                app:placeholderText="Password"-->

                <EditText
                    android:id="@+id/main_password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_58sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/selectoredittext"
                    android:cursorVisible="true"
                    android:focusable="true"
                    android:hint="@string/login_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="15"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColorHint="#A2ACBA"
                    app:hintTextColor="#A2ACBA"

                    />

                <TextView
                    android:id="@+id/login_changeschool"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_school"
                    android:textStyle="bold"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:gravity="end"
                android:text="@string/forget_pasword"
                android:textColor="@color/lightgray"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/main_signin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_gravity="bottom"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>