<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/identification_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:src="@drawable/ic_back_arrow" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/identificationnum_title"
                android:textColor="@color/darkbleu"
                android:textSize="@dimen/_14ssp" />

        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_80sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/identificationnum_title"
            android:textColor="@color/darkbleu"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:text="@string/identificationnum_maintitle"
            android:textColor="@color/lightgray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/darkbleu"
                android:layout_gravity="center_horizontal"
                app:bar_enabled="false"
                app:bar_height="2dp"
                app:box_margin_right="5dp"
                app:height="@dimen/_40sdp"
                app:length="6"
                app:otp_box_background="@drawable/roundedshapewhite"
                app:otp_text_size="24dp"
                app:width="@dimen/_35sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/identification_next"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/roundedshape"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>